--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -49,6 +49,7 @@
         width: 100%;
         height: 100%;
         padding: var(--vp-items-style-fly--meta__padding-v) var(--vp-items-style-fly--meta__padding-h);
+        overflow: auto;
         color: inherit;
 
         > * {
