added options to change meta color, links color and links hover color for all items styles
removed 'overlay' predefined options

--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -11,6 +11,7 @@
     --vp-items-style-default--image-hover__transform: scale(1.05);
 
     // Meta.
+    --vp-items-style-default--meta__color: inherit;
     --vp-items-style-default--meta__padding-v: 1.5em;
     --vp-items-style-default--meta__padding-h: 2em;
     --vp-items-style-default--meta-items__gap: 1.5em;
