--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -146,8 +146,17 @@
         // https://github.com/nk-o/visual-portfolio/issues/92
         z-index: 1;
     }
+
+    // Overlay
     .vp-portfolio__item:hover,
     .vp-portfolio__item-focus {
+        .vp-portfolio__item-img img {
+            transform: var(--vp-items-style-fade--image-hover__transform);
+        }
+    }
+    // Overlay
+    &.vp-portfolio__items-show-overlay-hover .vp-portfolio__item:hover,
+    &.vp-portfolio__items-show-overlay-hover .vp-portfolio__item-focus {
         .vp-portfolio__item-overlay {
             opacity: 1;
         }
@@ -155,8 +164,33 @@
             opacity: 1;
             transform: translateY(0);
         }
-        .vp-portfolio__item-img img {
-            transform: var(--vp-items-style-fade--image-hover__transform);
+    }
+    &.vp-portfolio__items-show-overlay-default {
+        .vp-portfolio__item-overlay {
+            opacity: 1;
+        }
+        .vp-portfolio__item-meta {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        .vp-portfolio__item:hover,
+        .vp-portfolio__item-focus {
+            .vp-portfolio__item-overlay {
+                opacity: 0;
+            }
+            .vp-portfolio__item-meta {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+        }
+    }
+    &.vp-portfolio__items-show-overlay-always {
+        .vp-portfolio__item-overlay {
+            opacity: 1;
+        }
+        .vp-portfolio__item-meta {
+            opacity: 1;
+            transform: translateY(0);
         }
     }
 
