--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -4,6 +4,24 @@
  * Author  : nK https://nkdev.info
  */
 
+/*
+ * Go Pro menu link
+ */
+#adminmenu a[href*="page=visual_portfolio_go_pro"],
+.wp-list-table.plugins a[href*="page=visual_portfolio_go_pro"] {
+    font-weight: 700;
+    color: #ff6a38;
+
+    .dashicons {
+        transition: none;
+    }
+
+    &:hover,
+    &:focus {
+        color: #f59372;
+    }
+}
+
 /**
  * Plugin Icon
  */
