--- a/src/gutenberg/_variables.scss
+++ b/src/gutenberg/_variables.scss
@@ -1,7 +1,7 @@
 /**
  * WordPress.
  */
-@import "../../node_modules/@wordpress/base-styles/colors";
+@import "../../node_modules/@wordpress/base-styles/colors.native";
 @import "../../node_modules/@wordpress/base-styles/variables";
 @import "../../node_modules/@wordpress/base-styles/breakpoints";
 @import "../../node_modules/@wordpress/base-styles/mixins";
