--- a/src/gutenberg/components/gallery-control/style.scss
+++ b/src/gutenberg/components/gallery-control/style.scss
@@ -98,7 +98,7 @@
         width: calc(100% - 15px);
         margin-top: 15px;
         margin-left: 15px;
-        border: 1px dashed #6d6d6d;
+        border: 1px solid $gray-900;
 
         > span {
             display: none;
