--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -11,6 +11,7 @@
 @import "./components/code-editor/style";
 @import "./components/color-picker/style";
 @import "./components/controls-render/style";
+@import "./components/dropdown/style";
 @import "./components/elements-selector/style";
 @import "./components/gallery-control/style";
 @import "./components/icons-selector/style";
