added meta staggering animation for fade and emerge items style
fixed custom scrollbar usage, added new wrapper for meta

--- a/src/assets/css/_variables-main.scss
+++ b/src/assets/css/_variables-main.scss
@@ -31,6 +31,10 @@
     --vp-images-lazy__background: linear-gradient(-70deg, rgba(140, 140, 140, 0) 42%, rgba(140, 140, 140, .05) 50%, rgba(140, 140, 140, 0) 58%);
     --vp-images-lazy__background-color: rgba(140, 140, 140, .05);
     --vp-images-lazy__animation-duration: 3s;
+
+    // Items meta staggering default index.
+    // Used in `items-meta-staggering.js` script
+    --vp-items--meta-staggering__index: 1;
 }
 
 .vp-spinner {
