--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -36,6 +36,16 @@
     }
 
     // meta
+    .vp-portfolio__item-meta-wrap {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+
+        .simplebar-content {
+            display: flex;
+            min-height: 100%;
+        }
+    }
     .vp-portfolio__item-meta {
         position: relative;
         display: flex;
@@ -43,19 +53,21 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         padding: var(--vp-items-style-fade--meta__padding-v) var(--vp-items-style-fade--meta__padding-h);
-        overflow: auto;
         color: inherit;
         text-align: center;
-        opacity: 0;
-        transition: var(--vp-items-style-fade-transition-duration) transform .05s var(--vp-items-style-fade-transition-easing), var(--vp-items-style-fade-transition-duration) opacity .05s var(--vp-items-style-fade-transition-easing);
-        transform: var(--vp-items-style-fade--meta__transform);
-        will-change: transform, opacity;
 
         > * {
             max-width: 100%;
             margin-bottom: var(--vp-items-style-fade--meta-items__gap);
+            opacity: 0;
+            transition-delay: calc(var(--vp-items-style-fade--meta-staggering__transition-delay) * var(--vp-items--meta-staggering__index));
+            transition-timing-function: var(--vp-items-style-fade--meta-staggering__transition-easing);
+            transition-duration: var(--vp-items-style-fade--meta-staggering__transition-duration);
+            transition-property: opacity, transform;
+            transform: translateY(10px);
+            will-change: transform, opacity;
         }
 
         > :last-child {
@@ -72,11 +84,11 @@
         font-size: var(--vp-items-style-fade--meta-categories__font-size);
         font-weight: var(--vp-items-style-fade--meta-categories__font-weight);
         text-transform: var(--vp-items-style-fade--meta-categories__text-transform);
-        opacity: var(--vp-items-style-fade--meta-categories__opacity);
 
         .vp-portfolio__item-meta-category {
             display: flex;
             margin-left: var(--vp-items-style-fade--meta-categories__gap);
+            opacity: var(--vp-items-style-fade--meta-categories__opacity);
 
             @if variable-exists(rtl) and $rtl {
                 &::before {
@@ -113,10 +125,10 @@
         margin-left: calc(-1 * var(--vp-items-style-fade--meta-inline__gap));
         font-weight: var(--vp-items-style-fade--meta-inline__font-weight);
         line-height: var(--vp-items-style-fade--meta-inline__line-height);
-        opacity: var(--vp-items-style-fade--meta-inline__font-opacity);
 
         > * {
             margin-left: var(--vp-items-style-fade--meta-inline__gap);
+            opacity: var(--vp-items-style-fade--meta-inline__font-opacity);
         }
     }
     .vp-portfolio__item-meta-part-icon {
@@ -134,7 +146,10 @@
     }
     .vp-portfolio__item-meta-excerpt {
         line-height: var(--vp-items-style-fade--meta-excerpt__line-height);
-        opacity: var(--vp-items-style-fade--meta-excerpt__opacity);
+
+        > div {
+            opacity: var(--vp-items-style-fade--meta-excerpt__opacity);
+        }
     }
 
     // Transitions
@@ -160,7 +175,7 @@
         .vp-portfolio__item-overlay {
             opacity: 1;
         }
-        .vp-portfolio__item-meta {
+        .vp-portfolio__item-meta > * {
             opacity: 1;
             transform: translateY(0);
         }
@@ -169,7 +184,7 @@
         .vp-portfolio__item-overlay {
             opacity: 1;
         }
-        .vp-portfolio__item-meta {
+        .vp-portfolio__item-meta > * {
             opacity: 1;
             transform: translateY(0);
         }
@@ -178,7 +193,7 @@
             .vp-portfolio__item-overlay {
                 opacity: 0;
             }
-            .vp-portfolio__item-meta {
+            .vp-portfolio__item-meta > * {
                 opacity: 0;
                 transform: translateY(10px);
             }
@@ -188,7 +203,7 @@
         .vp-portfolio__item-overlay {
             opacity: 1;
         }
-        .vp-portfolio__item-meta {
+        .vp-portfolio__item-meta > * {
             opacity: 1;
             transform: translateY(0);
         }
