--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -40,6 +40,16 @@
     }
 
     // meta
+    .vp-portfolio__item-meta-wrap {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+
+        .simplebar-content {
+            display: flex;
+            min-height: 100%;
+        }
+    }
     .vp-portfolio__item-meta {
         position: relative;
         display: flex;
@@ -47,9 +57,8 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         padding: var(--vp-items-style-fly--meta__padding-v) var(--vp-items-style-fly--meta__padding-h);
-        overflow: auto;
         color: inherit;
 
         > * {
@@ -71,11 +80,11 @@
         font-size: var(--vp-items-style-fly--meta-categories__font-size);
         font-weight: var(--vp-items-style-fly--meta-categories__font-weight);
         text-transform: var(--vp-items-style-fly--meta-categories__text-transform);
-        opacity: var(--vp-items-style-fly--meta-categories__opacity);
 
         .vp-portfolio__item-meta-category {
             display: flex;
             margin-left: var(--vp-items-style-fly--meta-categories__gap);
+            opacity: var(--vp-items-style-fly--meta-categories__opacity);
 
             @if variable-exists(rtl) and $rtl {
                 &::before {
@@ -112,10 +121,10 @@
         margin-left: calc(-1 * var(--vp-items-style-fly--meta-inline__gap));
         font-weight: var(--vp-items-style-fly--meta-inline__font-weight);
         line-height: var(--vp-items-style-fly--meta-inline__line-height);
-        opacity: var(--vp-items-style-fly--meta-inline__font-opacity);
 
         > * {
             margin-left: var(--vp-items-style-fly--meta-inline__gap);
+            opacity: var(--vp-items-style-fly--meta-inline__font-opacity);
         }
     }
     .vp-portfolio__item-meta-part-icon {
@@ -133,7 +142,10 @@
     }
     .vp-portfolio__item-meta-excerpt {
         line-height: var(--vp-items-style-fly--meta-excerpt__line-height);
-        opacity: var(--vp-items-style-fly--meta-excerpt__opacity);
+
+        > * {
+            opacity: var(--vp-items-style-fly--meta-excerpt__opacity);
+        }
     }
 
     // align
