--- a/src/templates/items-list/items-style/fade/_variables.scss
+++ b/src/templates/items-list/items-style/fade/_variables.scss
@@ -50,7 +50,7 @@
     // Meta Staggering Animation.
     --vp-items-style-fade--meta-staggering__transition-duration: .25s;
     --vp-items-style-fade--meta-staggering__transition-delay: .07s;
-    --vp-items-style-fade--meta-staggering__transition-easing: ease-out;
+    --vp-items-style-fade--meta-staggering__transition-easing: cubic-bezier(.25, .46, .45, .94);
 
     // Transitions.
     --vp-items-style-fade-transition-duration: var(--vp-interactive__transition-duration);
