--- a/src/templates/items-list/items-style/emerge/_variables.scss
+++ b/src/templates/items-list/items-style/emerge/_variables.scss
@@ -49,6 +49,7 @@
     --vp-items-style-emerge--meta-excerpt__opacity: .8;
 
     // Meta Staggering Animation.
+    --vp-items-style-emerge--meta-staggering__index: 1;
     --vp-items-style-emerge--meta-staggering__transition-duration: .25s;
     --vp-items-style-emerge--meta-staggering__transition-delay: .07s;
     --vp-items-style-emerge--meta-staggering__transition-easing: cubic-bezier(.25, .46, .45, .94);
