--- a/src/templates/items-list/items-style/fade/_variables.scss
+++ b/src/templates/items-list/items-style/fade/_variables.scss
@@ -48,6 +48,7 @@
     --vp-items-style-fade--meta-excerpt__opacity: .8;
 
     // Meta Staggering Animation.
+    --vp-items-style-fade--meta-staggering__index: 1;
     --vp-items-style-fade--meta-staggering__transition-duration: .25s;
     --vp-items-style-fade--meta-staggering__transition-delay: .07s;
     --vp-items-style-fade--meta-staggering__transition-easing: cubic-bezier(.25, .46, .45, .94);
