--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -131,6 +131,7 @@
 .vp-portfolio__layout-elements {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     margin-top: calc(-1 * var(--vp-elements__gap));
     margin-left: calc(-1 * var(--vp-elements__gap));
 
