changed emerge skew element to clip-path

--- a/src/templates/items-list/items-style/emerge/_variables.scss
+++ b/src/templates/items-list/items-style/emerge/_variables.scss
@@ -20,9 +20,11 @@
     --vp-items-style-emerge--overlay__padding-h: 2em;
     --vp-items-style-emerge--overlay__color: #fff;
     --vp-items-style-emerge--overlay__background-color: #000;
-    --vp-items-style-emerge--overlay-skew__height: 200%;
-    --vp-items-style-emerge--overlay-skew__transform: skew(0deg, 0deg);
-    --vp-items-style-emerge--overlay-skew-hover__transform: skew(0deg, 3deg);
+    --vp-items-style-emerge--overlay-skew__height: 20px;
+    --vp-items-style-emerge--overlay-skew__clip-left: var(--vp-items-style-emerge--overlay-skew__height);
+    --vp-items-style-emerge--overlay-skew__clip-right: var(--vp-items-style-emerge--overlay-skew__height);
+    --vp-items-style-emerge--overlay-skew-hover__clip-left: 0;
+    --vp-items-style-emerge--overlay-skew-hover__clip-right: var(--vp-items-style-emerge--overlay-skew__height);
 
     // Meta.
     --vp-items-style-emerge--meta-items__gap: 1.5em;
