--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -45,30 +45,17 @@
         max-height: 100%;
         color: var(--vp-items-style-emerge--overlay__color);
         background-color: var(--vp-items-style-emerge--overlay__background-color);
-        transition: var(--vp-items-style-emerge-transition-duration) transform cubic-bezier(.25, .46, .45, .94);
+        transition: var(--vp-items-style-emerge-transition-duration) transform cubic-bezier(.25, .46, .45, .94), var(--vp-items-style-emerge-transition-duration) clip-path cubic-bezier(.25, .46, .45, .94);
         transform: translateY(100%);
-        will-change: transform;
+        will-change: transform, clip-path;
 
         // Fix FireFox image blinking
         // https://github.com/nk-o/visual-portfolio/issues/92
         z-index: 2;
 
         @supports (clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%)) {
-            &::before {
-                content: "";
-                position: absolute;
-                display: block;
-                right: 0;
-                bottom: calc(100% - .1px);
-                left: 0;
-                // fixed visual issue, when .1px of transparent line visible.
-                height: calc(.1px + var(--vp-items-style-emerge--overlay-skew__height));
-                clip-path: polygon(0 var(--vp-items-style-emerge--overlay-skew__clip-left), 100% var(--vp-items-style-emerge--overlay-skew__clip-right), 100% 100%, 0% 100%);
-                background-color: var(--vp-items-style-emerge--overlay__background-color);
-                transition: var(--vp-items-style-emerge-transition-duration) clip-path var(--vp-items-style-emerge-transition-easing);
-                will-change: clip-path;
-                z-index: -1;
-            }
+            padding-top: var(--vp-items-style-emerge--overlay-skew__height);
+            clip-path: polygon(0 var(--vp-items-style-emerge--overlay-skew__clip-left), 100% var(--vp-items-style-emerge--overlay-skew__clip-right), 100% 100%, 0% 100%);
         }
     }
 
