--- a/src/assets/css/layout-masonry.scss
+++ b/src/assets/css/layout-masonry.scss
@@ -1,6 +1,20 @@
 /*
  * Visual Portfolio layout Masonry.
  */
+
+// Gaps.
+[data-vp-layout="masonry"] {
+    .vp-portfolio__items {
+        margin-top: calc(-1 * var(--vp-items__gap));
+        margin-left: calc(-1 * var(--vp-items__gap));
+    }
+    .vp-portfolio__item-wrap .vp-portfolio__item {
+        margin-top: var(--vp-items__gap);
+        margin-left: var(--vp-items__gap);
+    }
+}
+
+// Images.
 [data-vp-masonry-images-aspect-ratio*=":"] {
     .vp-portfolio__item-img img,
     .vp-portfolio__item-img {
