fixed images displaying when Tiles with 0 gap used

--- a/src/assets/css/_variables-main.scss
+++ b/src/assets/css/_variables-main.scss
@@ -12,6 +12,9 @@
     // Radius.
     --vp-border-radius: 5px;
 
+    // Gap.
+    --vp-items__gap: 0;
+
     // Transitions.
     --vp-transition-duration: .3s;
     --vp-transition-easing: ease-in-out;
