--- a/src/gutenberg/components/icons-selector/style.scss
+++ b/src/gutenberg/components/icons-selector/style.scss
@@ -65,9 +65,12 @@
 
         span {
             margin-top: auto;
+            margin-right: -8px;
+            margin-left: -8px;
             font-size: .73em;
             font-weight: 600;
             text-transform: uppercase;
+            word-break: break-word;
         }
         div + span {
             padding-top: 8px;
