--- a/src/assets/css/elementor.scss
+++ b/src/assets/css/elementor.scss
@@ -7,7 +7,7 @@
 [data-vp-layout="masonry"],
 [data-vp-layout="tiles"] {
     .elementor & .vp-portfolio__items .vp-portfolio__item-wrap .vp-portfolio__item {
-        margin-top: var(--vp-items__gap);
+        margin-top: var(--vp-items__gap-vertical);
         margin-left: var(--vp-items__gap);
     }
 }
