added Popup gallery setting to disable "Click to Zoom" option

--- a/src/assets/css/popup-photoswipe.scss
+++ b/src/assets/css/popup-photoswipe.scss
@@ -96,4 +96,9 @@
             }
         }
     }
+
+    // Default cursor when click to zoom option disabled.
+    &.vp-pswp-no-zoom .pswp__img {
+        cursor: default;
+    }
 }
